# NextcordTemplate

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
cogs/: ping.py
