[tool.poetry]
name = "autopartner"
version = "0.1.0"
description = ""
authors = ["Alexciao <alex.corazza@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = ">=1.0.0"
nextcord = {extras = ["speed"], version = "^2.6.0"}
setuptools = "^70.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
